--- a/changes.txt
+++ b/changes.txt
@@ -25,7 +25,7 @@
 * 1.0.6
 ** Language:
 ** Features:
-- Add Coccilib.version() allowing ocaml code to access the virsion of
+- Add Coccilib.version() allowing ocaml code to access the version of
   spatch being used.
 - Per file profiling with --profile-per-file for processing of directories.
 - allow -j9 and -Ifoo, as used in some other tools
