texlive-fonts-extra is required to build the documentation

--- a/install.txt
+++ b/install.txt
@@ -26,6 +26,7 @@ On Debian/Ubuntu, install the following packages
  - libpycaml-ocaml-dev
  - menhir and libmenhir-ocaml-dev
  - libpcre-ocaml-dev
+ - texlive-fonts-extra (for the documentation)
 
 On Fedora, install the following packages
  - pkgconfig (optional, but strongly recommended)
