Fixed: typo in cocci_syntax.tex
This patch fix 3 spelling typos found in docs/manual/cocci_syntax.tex

Signed-off-by: Masanari Iida <standby24x7@gmail.com>

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -17,7 +17,7 @@ possible C-language constants.
 
 A square bracket that is surrounded by spaces in the description of a term
 should appear explicitly in the term, as in an array reference.  On the
-other hand, square brackets that surround some other term indicat that the
+other hand, square brackets that surround some other term indicate that the
 presence of that term is optional.
 
 %
@@ -654,7 +654,7 @@ foo()
 \end{tabular}
 \end{center}
 
-Alternatively, the following inidcates that foo() is allowed but optional.
+Alternatively, the following indicates that foo() is allowed but optional.
 This case is typically most useful when all occurrences, if any, of foo()
 prior to c() should be transformed.
 
@@ -1062,7 +1062,7 @@ last matching include that is not under an ifdef in the file.
 
 Each element of a disjunction must be a proper term like an expression, a
 statement, an identifier or a declaration. The constraint on a conjunction
-is similiar.  Thus, the rule on the left below is not a syntactically
+is similar.  Thus, the rule on the left below is not a syntactically
 correct SmPL rule. One may use the rule on the right instead.
 
 \begin{center}
