--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -25,7 +25,7 @@ presence of that term is optional.
 A PDF version of this documentation is available at
 \url{http://coccinelle.lip6.fr/docs/main_grammar.pdf}.
 \else
-A HTML version of this documentation is available online at
+An HTML version of this documentation is available online at
 \url{http://coccinelle.lip6.fr/docs/main_grammar.html}.
 \fi
 
@@ -257,7 +257,7 @@ that is all capital letters (possibly containing numbers) as a constant as
 well, because the names given to macros in Linux usually have this form.
 
 An identifier is the name of a structure field, a macro, a function, or a
-variable.  Is is the name of something rather than an expression that has a
+variable.  It is the name of something rather than an expression that has a
 value.  But an identifier can be used in the position of an expression as
 well, where it represents a variable.
 
