--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -192,6 +192,9 @@ i.e., including as an element of another statement list.
   \CASE{parameter \opt{list} \NT{ids} ;}
   \CASE{parameter list [ \NT{id} ] \NT{ids} ;}
   \CASE{parameter list [ \NT{const} ] \NT{ids} ;}
+  \CASE{identifier \opt{list} \NT{ids} ;}
+  \CASE{identifier list [ \NT{id} ] \NT{ids} ;}
+  \CASE{identifier list [ \NT{const} ] \NT{ids} ;}
   \CASE{type \NT{ids} ;}
   \CASE{statement \opt{list} \NT{ids} ;}
   \CASE{declaration \NT{ids} ;}
@@ -263,6 +266,9 @@ well, where it represents a variable.
 
 It is possible to specify that an expression list or a parameter list
 metavariable should match a specific number of expressions or parameters.
+
+An identifier list is only used for the parameter list of a macro.  It is
+possible to specify its length.
 
 It is possible to specify some information about the definition of a fresh
 identifier.  See the wiki.
