--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coccinelle (1.0.6-00036-gb62df17~16.04npalix1) xenial; urgency=medium
+
+  * New release 1.0.6-00036-gb62df17
+
+ -- Nicolas Palix (LIG) <nicolas.palix@imag.fr>  Wed, 28 Sep 2016 14:32:37 +0200
+
 coccinelle (1.0.2~14.04npalix3) trusty; urgency=medium
 
   * New release 1.0.2
