update changes for tpye variable change

--- a/changes.txt
+++ b/changes.txt
@@ -32,6 +32,8 @@
 ** Bugfix:
 - Improved detection of metavariables in strings.  Problem reported by
   Wolfram Sang.
+- Don't require all metavars in type exp meta constraint to be bound,
+  unless only one type is specified.  Problem reported by Michael Stefaniuc.
 * 1.0.6
 ** Language:
 - Allow \ in #define in semantic patch rules, to allow body with multiple
