Added: changes update for script finalizers

--- a/changes.txt
+++ b/changes.txt
@@ -28,6 +28,8 @@
 ** Language:
 - Allow negative constraints on type metavariables.  See
   tests/type_constraints.cocci
+- Allow script finalizers for parallel computation.  See
+  tests/countcalls.cocci and tests/countcalls_python.cocci
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
