--- a/changes.txt
+++ b/changes.txt
@@ -45,6 +45,7 @@
   iterations.
 - Multiple initializers and finalizers are allowed for the same language.
 - Support function pointer types in casts.
+- Allow something identified as a MacroDecl as a structure field.
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
