--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -611,6 +611,9 @@ stars are used in column 0 rather than {\tt -} and {\tt +}, then the {\tt
   default indentation is a tab.  This option is thus particularly relevant
   to projects that don't use tabs.}
 
+\normal{-{}-max-width}{The maximum line width for generated code.  78 by
+  default.}
+
 \rare{-o $\langle$file$\rangle$}{ This causes the transformed code to be
   placed in the file {\tt file}.  The difference between the original code
   and the transformed code is still printed to the standard output using
