--- a/docs/manual/macros_common.tex
+++ b/docs/manual/macros_common.tex
@@ -26,6 +26,7 @@
 \newcommand{\ttlb}{\mbox{\tt \char'173}}
 \newcommand{\ttrb}{\mbox{\tt \char'175}}
 \newcommand{\ttmid}{\mbox{\tt \char'174}}
+\newcommand{\ttand}{\mbox{\tt \char'046}}
 \newcommand{\tttld}{\mbox{\tt \char'176}}
 
 \newcommand{\fixme}[1]{{\color{red} #1}}
