--- a/changes.txt
+++ b/changes.txt
@@ -46,6 +46,7 @@
 - Multiple initializers and finalizers are allowed for the same language.
 - Support function pointer types in casts.
 - Allow something identified as a MacroDecl as a structure field.
+- Conjunctions, ie ( & ), for declarations.
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
