--- a/changes.txt
+++ b/changes.txt
@@ -50,6 +50,7 @@
 - Optional bitfield annotation on expression meta-variables. Requested by
   Kumar Gala. See tests/bitfield_matching.cocci
 - Bit-field matching, see tests/bitfield.cocci
+- Anonymous field matching, see tests/anonfield.cocci
 ** Features:
 - Better error reporting for unparsable terms when using make_expr etc in
   script code.  Problem reported by Markus Elfring.
