Delete a misplaced dot
A dot was placed behind a function call identifier while an if clause
was started there in this sentence. Fix this typo.

Signed-off-by: Markus Elfring <elfring@users.sourceforge.net>

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -665,7 +665,7 @@ optional, and another (<+... ...+>) indicates that the pattern in between
 the ellipses must be matched at least once, on some control-flow path.  In
 the latter, the \texttt{+} is intended to be reminiscent of the \texttt{+}
 used in regular expressions.  For instance, the following SmPL patch tells
-Coccinelle to remove all calls to c(). if foo() is present at least
+Coccinelle to remove all calls to c() if foo() is present at least
 once since the beginning of the function.
 
 \begin{center}
