--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1833,9 +1833,9 @@ spatch.  This is supported through the search of .cocciconfig files in each of
 the following directories, later lines extend and may override earlier ones:
 
 \begin{itemize}
-	\item Your current user's home directory is processed first
-	\item Your directory from which spatch is called is processed next
-	\item The directory provided with the -{}-dir option is processed last, if used
+	\item Your current user's home directory is processed first.
+	\item Your directory from which spatch is called is processed next.
+	\item The directory provided with the -{}-dir option is processed last, if used.
 \end{itemize}
 
 Newlines, even with \, are not tolerated in attribute values. An example
