--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -133,8 +133,8 @@ behavior.  Using \NT{disable-iso} with the given name disables this behavior.
 \item \KW{optional\_qualifier}: This is similar to \KW{optional\_storage},
   except that here it is the qualifier (i.e., const or volatile) that does
   not have to be specified in the SmPL code, but may be present in the C code.
-\item \KW{optional\_attributes}: This is similar to
-  \KW{optional\_attributes}, except that here is it an attribute (e.g.,
+\item \KW{optional\_attributes}: This is also similar to
+  \KW{optional\_storage}, except that here is it an attribute (e.g.,
   \_\_init) that does not have to be specified in the SmPL code, but may be
   present in the C code.  \textbf{Note that this isomorphism is currently
     useless, because matching of attributes is not supported, due to the
